--- a/composer.json
+++ b/composer.json
@@ -16,18 +16,18 @@
         }
     ],
     "require": {
-        "php": ">=7.1.3",
-        "illuminate/support": "^5.6",
-        "laravelcollective/html": "^5.6",
-        "illuminate/translation": "^5.6",
+        "php": ">=7.2.5",
+        "illuminate/support": "^6.0 || ^7.0"",
+        "laravelcollective/html": "^6.0",
+        "illuminate/translation": "^6.0 || ^7.0",
         "doctrine/dbal": "~2.6",
-        "symfony/finder": "~4.0"
+        "symfony/finder": "^4.0|^5.0"
     },
     "require-dev": {
         "phpspec/phpspec": "~3.0",
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~7.0"
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "1.3.1",
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "classmap": [
