--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=7.2.5",
-        "illuminate/support": "^6.0 || ^7.0"",
+        "illuminate/support": "^6.0 || ^7.0",
         "laravelcollective/html": "^6.0",
         "illuminate/translation": "^6.0 || ^7.0",
         "doctrine/dbal": "~2.6",
