--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,13 @@
         "laravelcollective/html": "^6.0",
         "illuminate/translation": "^6.0 || ^7.0",
         "doctrine/dbal": "~2.6",
-        "symfony/finder": "^4.0|^5.0"
+        "symfony/finder": "^4.0"
     },
     "require-dev": {
         "phpspec/phpspec": "~3.0",
-        "fzaninotto/faker": "^1.9.1",
-        "mockery/mockery": "1.3.1",
-        "phpunit/phpunit": "^8.5"
+        "fzaninotto/faker": "~1.4",
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "~7.0"
     },
     "autoload": {
         "classmap": [
